# EdgeDetectorApp

./: .gitignore  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp
app/src/main/java/com/example/edgeviewer/: MainActivity.kt  NativeBridge.kt
app/src/main/java/com/example/edgeviewer/camera/: CameraController.kt
app/src/main/java/com/example/edgeviewer/gl/: GLRenderer.kt
gradle/wrapper/: gradle-wrapper.properties
